--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "odin-members-only",
   "version": "0.0.0",
+  "engines": {
+    "version": ">=18.16.0"
+  },
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
@@ -12,6 +15,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "mongoose": "^8.0.0",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11"
   },
