--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "devstart": "nodemon ./bin/www",
-    "serverstart": "DEBUG=odin-members-only:* npm run devstart"
+    "devstart": "nodemon ./bin/www"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
